fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Add responsive mobile sidebar with burger toggle

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
   <div class="layout">
-    <!-- SIDEBAR -->
     <aside class="sidebar" id="sidebar">
       <div class="logo-block">
         <img src="images/logo-light.png" alt="Sirko Club Logo" />
@@ -30,18 +29,16 @@
       </nav>
     </aside>
 
-    <!-- MAIN -->
     <main class="main">
-      <!-- HEADER -->
       <header class="main-header">
         <button class="burger" id="burger-btn" aria-label="Відкрити меню">&#9776;</button>
         <h1>Sirko Адмін</h1>
         <div class="header-meta">
           <div class="motto">Навчаємо з любов’ю до собак</div>
           <div class="header-buttons">
-            <button id="btn-expense-form" aria-label="Відкрити форму витрат">Витрати</button>
-            <button id="btn-reports" aria-label="Відкрити звіти">Звіти</button>
-            <button id="btn-client-map" aria-label="Відкрити карту клієнтів">Карта</button>
+            <button id="btn-expense-form" aria-label="Витрати">Витрати</button>
+            <button id="btn-reports" aria-label="Звіти">Звіти</button>
+            <button id="btn-client-map" aria-label="Карта">Карта</button>
           </div>
           <button id="theme-toggle" aria-label="Перемкнути темний режим">
             <span class="material-icons" id="theme-icon">dark_mode</span>
@@ -49,7 +46,6 @@
         </div>
       </header>
 
-      <!-- DASHBOARD -->
       <section id="dashboard" class="section dashboard">
         <div class="cards">
           <div class="card" tabindex="0">
@@ -83,7 +79,6 @@
         </div>
       </section>
 
-      <!-- SECTIONS WITH SKELETON -->
       <section id="expense-form" class="section hidden">
         <div class="skeleton-wrapper hidden">
           <div class="skeleton-block"></div>
@@ -119,7 +114,6 @@
     </main>
   </div>
 
-  <!-- PAW ZONE -->
   <div class="paw-zone">
     <img src="images/paw-print.svg" class="paw paw1" alt="">
     <img src="images/paw-print.svg" class="paw paw2" alt="">
@@ -127,7 +121,6 @@
     <img src="images/paw-print.svg" class="paw paw4" alt="">
   </div>
 
-  <!-- MOBILE TAB NAV -->
   <nav class="mobile-nav">
     <button id="btn-dashboard-nav" aria-label="Дашборд">
       <span class="material-icons">dashboard</span><span>Дашборд</span>
@@ -143,7 +136,6 @@
     </button>
   </nav>
 
-  <!-- FOOTER -->
   <footer class="admin-footer">
     <div class="social">
       <a href="https://t.me/yourchannel" target="_blank" aria-label="Telegram">
